Fixed some things, edited some metas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="icon" type="image/png" href="/frontend/assets/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ICP Burn By Minute</title>
+  <meta content="Network wide burn rate of ICP in minutes." name="description" />
 </head>
 <body>
 <div id="root"></div>
