--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/frontend/assets/favicon.png" />
+  <link rel="icon" type="image/ico" href="/frontend/assets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ICP Burn By Minute</title>
   <meta content="Network wide burn rate of ICP in minutes." name="description" />
