Added more metas to html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ICP Burn By Minute</title>
   <meta content="Network wide burn rate of ICP in minutes." name="description" />
+  <meta name="keywords" content="ICP, Internet Computer, Burn, Burn Rate, Burn By Minute, ICP Burn" />
+  <meta name="author" content="GitHub: cp-daniel-mccoy" />
 </head>
 <body>
 <div id="root"></div>
